# referentielijsten-api-client

./: .gitignore  MANIFEST.in  README.rst  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: code_quality.yml
docker/: README.md
docker/fixtures/: referentielijsten_fixtures.json
docs/: conf.py  index.rst  quickstart.rst
dotgithub/workflows/: ci.yml
referentielijsten_api_client/: apps.py  client.py  exceptions.py  typing.py  utils.py
testapp/: settings.py
tests/: conftest.py  helpers.py  test_tables.py
tests/cassettes/: test_get_all_tables.yaml  test_get_table.yaml  test_get_table_does_not_exist.yaml
