[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "referentielijsten_api_client"
version = "0.1.0"
description = "API Client library to communicate with the Referentielijsten API service."
authors = [
    {name = "Maykin Media", email = "support@maykinmedia.nl"}
]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["maykin", "referentielijsten_api", "referentielijsten api", "referentielijsten api client", "common ground", "api client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
    "ape_pie>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/maykinmedia/referentielijsten-api-client"
Documentation = "http://referentielijsten-api-client.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/maykinmedia/referentielijsten-api-client/issues"
"Source Code" = "https://github.com/maykinmedia/referentielijsten-api-client"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "tox",
    "ruff",
    "pyright",
    "vcrpy",
    "pydantic",
    "requests",
    "types-requests",
    "factory-boy"
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
release = [
    "bump-my-version",
]

[tool.setuptools.packages.find]
include = ["referentielijsten_api_client*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "vcr: mark tests that use VCR cassettes for HTTP interactions",
]

[tool.bumpversion]
current_version = "0.1.0"
files = [
    {filename = "pyproject.toml"},
    {filename = "README.rst"},
    {filename = "docs/conf.py"},
]

[tool.coverage.run]
branch = true
source = ["referentielijsten_api_client"]
omit = [
    # migrations run while django initializes the test db
    "*/migrations/*",
]

[tool.coverage.report]
exclude_also = [
    "if (typing\\.)?TYPE_CHECKING:",
    "@(typing\\.)?overload",
    "class .*\\(.*Protocol.*\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "\\bpass$",
]

[tool.pyright]
include = [
    "referentielijsten_api_client",
    "testapp",
    "tests",
]
ignore = []
pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "DJ",  # django
    "LOG", # logging
    "G",
    "I",   # isort
    "E",   # pycodestyle
    "F",   # pyflakes
    "PERF",# perflint
    "B",   # flake8-bugbear
]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
